--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "main": "public/electron.js",
+  "homepage": "./",
   "dependencies": {
     "@getstation/electron-google-oauth2": "^1.1.2",
     "csv-parse": "^4.6.3",
