--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "electron": "electron .",
     "postinstall": "install-app-deps",
     "pack": "electron-builder --dir",
-    "dist": "npm run icons && npm run build && electron-builder",
+    "dist": "npm run build && electron-builder",
     "icons": "./make-icons.sh icon.svg public",
     "clean": "rm -rf dist && rm -rf build"
   },
